--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="feedback">Feedback</string>
     <string name="logout">Log out</string>
     <string name="daysRem">Days remaining</string>
+    <string name="Entername">Enter project name</string>
 </resources>
