--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,17 +11,22 @@
     <string name="t_name">Enter taluka of village</string>
     <string name="ph_no">Enter contact number</string>
     <string name="done">Done</string>
+    <string name="newProject">New Projects</string>
     <string name="language">Change app language</string>
     <string name="about">About</string>
+    <string name="guide">Guide</string>
+    <string name="leader">Leaderboard</string>
     <string name="logout">Log out</string>
     <string name="daysRem">Days remaining</string>
     <string name="Entername">Enter project name</string>
-<<<<<<< HEAD
     <string name="Enterdesc">Enter project description</string>
     <string name="feedback">Feedb</string>
-    <string name="logout">L</string>
-=======
     <string name="type">Type:</string>
-    <string name="English">मराठी</string>
->>>>>>> f2b3f2cc1ba3a43363748505394893680f56c954
+    <string name="npd">Add new project here</string>
+    <string name="vls">View Leaderboard</string>
+    <string name="gs">You\'ll get guidance</string>
+    <string name="helpE">More help</string>
+    <string name="rank">Rank: #</string>
+    <string name="points">Points: </string>
+    <string name="cap">Choose a project</string>
 </resources>
